--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -93,7 +93,7 @@ jobs:
       if: matrix.e2e-tests == 'android'
       uses: reactivecircus/android-emulator-runner@v2
       with:
-        script: ./gradlew e2eAndroidTest -PisCI -Pselenium.version=$latest_snapshot && \
+        script: pwd  &&
           ./gradlew e2eFlutterTest -PisCI -Pplatform="android" -Pselenium.version=$latest_snapshot
         api-level: ${{ env.ANDROID_SDK_VERSION }}
         avd-name: ${{ env.ANDROID_EMU_NAME }}
