--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -83,9 +83,7 @@ jobs:
       run: |
         npm install --location=global appium
         appium driver install appium-flutter-integration-driver --source npm
-        export FLUTTER_APP_ANDROID=https://github.com/AppiumTestDistribution/appium-flutter-server/releases/latest/download/app-debug.apk
-        export FLUTTER_APP_IOS=https://github.com/AppiumTestDistribution/appium-flutter-server/releases/latest/download/ios.zip
-
+        
     - name: Install UIA2 driver
       if: matrix.e2e-tests == 'android'
       run: appium driver install uiautomator2
@@ -94,6 +92,7 @@ jobs:
       uses: reactivecircus/android-emulator-runner@v2
       with:
         script: pwd  &&
+          export FLUTTER_APP=https://github.com/AppiumTestDistribution/appium-flutter-server/releases/latest/download/app-debug.apk &&
           ./gradlew e2eFlutterTest -PisCI -Pplatform="android" -Pselenium.version=$latest_snapshot
         api-level: ${{ env.ANDROID_SDK_VERSION }}
         avd-name: ${{ env.ANDROID_EMU_NAME }}
