--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -93,8 +93,7 @@ jobs:
       uses: reactivecircus/android-emulator-runner@v2
       with:
         script: pwd  &&
-          ./gradlew e2eFlutterTest -Pplatform="android" -PflutterApp=$flutter_android_app \
-          -Pselenium.version=$latest_snapshot -PisCI
+          ./gradlew e2eFlutterTest -Pplatform="android" -PflutterApp=$flutter_android_app -Pselenium.version=$latest_snapshot -PisCI
         api-level: ${{ env.ANDROID_SDK_VERSION }}
         avd-name: ${{ env.ANDROID_EMU_NAME }}
         disable-spellchecker: true
