--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,6 +26,7 @@ env:
   XCODE_VERSION: "15.4"
   IOS_DEVICE_NAME: iPhone 15
   IOS_PLATFORM_VERSION: "17.5"
+  FLUTTER_ANDROID_APP: "https://github.com/AppiumTestDistribution/appium-flutter-server/releases/latest/download/app-debug.apk"
 
 jobs:
   build:
@@ -92,8 +93,7 @@ jobs:
       uses: reactivecircus/android-emulator-runner@v2
       with:
         script: pwd  &&
-          export FLUTTER_APP=https://github.com/AppiumTestDistribution/appium-flutter-server/releases/latest/download/app-debug.apk &&
-          ./gradlew e2eFlutterTest -Pplatform="android" -Pselenium.version=$latest_snapshot -PisCI
+          ./gradlew e2eFlutterTest -Pplatform="android" -Pselenium.version=$latest_snapshot -PisCI -PflutterApp=${{ env.FLUTTER_ANDROID_APP }}
         api-level: ${{ env.ANDROID_SDK_VERSION }}
         avd-name: ${{ env.ANDROID_EMU_NAME }}
         disable-spellchecker: true
