--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -92,7 +92,7 @@ jobs:
       if: matrix.e2e-tests == 'android'
       uses: reactivecircus/android-emulator-runner@v2
       with:
-        script: pwd  &&
+        script: ./gradlew e2eAndroidTest -PisCI -Pselenium.version=$latest_snapshot  &&
           ./gradlew e2eFlutterTest -Pplatform="android" -Pselenium.version=$latest_snapshot -PisCI -PflutterApp=${{ env.FLUTTER_ANDROID_APP }}
         api-level: ${{ env.ANDROID_SDK_VERSION }}
         avd-name: ${{ env.ANDROID_EMU_NAME }}
