--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,7 +20,6 @@ concurrency:
 
 env:
   ANDROID_SDK_VERSION: "28"
-  ANDROID_SDK_VERSION_FLUTTER: "31"
   ANDROID_EMU_NAME: test
   ANDROID_EMU_TARGET: default
   # https://github.com/actions/runner-images/blob/main/images/macos/macos-14-arm64-Readme.md
@@ -116,11 +115,12 @@ jobs:
       uses: reactivecircus/android-emulator-runner@v2
       with:
         script: ./gradlew e2eFlutterTest -Pplatform="android" -Pselenium.version=$latest_snapshot -PisCI -PflutterApp=${{ env.FLUTTER_ANDROID_APP }}
-        api-level: ${{ env.ANDROID_SDK_VERSION_FLUTTER }}
+        api-level: 30
         avd-name: ${{ env.ANDROID_EMU_NAME }}
         disable-spellchecker: true
         disable-animations: true
-        target: ${{ env.ANDROID_EMU_TARGET }}
+        target: google_apis
+
 
     - name: Select Xcode
       if: matrix.e2e-tests == 'ios' || matrix.e2e-tests == 'flutter-ios'
