--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -114,8 +114,12 @@ jobs:
       if: matrix.e2e-tests == 'flutter-android'
       uses: reactivecircus/android-emulator-runner@v2
       with:
-        script: ./gradlew e2eFlutterTest -Pplatform="android" -Pselenium.version=$latest_snapshot -PisCI -PflutterApp=${{ env.FLUTTER_ANDROID_APP }} --tests "io.appium.java_client.android.CommandTest.testCameraMocking"
-        api-level: 29
+        script: |
+          pwd
+          mkdir ${{ github.workspace }}/logs
+          ls
+          ./gradlew e2eFlutterTest -Pplatform="android" -Pselenium.version=$latest_snapshot -PisCI -PflutterApp=${{ env.FLUTTER_ANDROID_APP }} --tests "io.appium.java_client.android.CommandTest.testCameraMocking"
+        api-level: "30"
         disable-spellchecker: true
         disable-animations: true
         arch: x86_64
