--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -112,7 +112,7 @@ jobs:
         disable-animations: true
         arch: x86_64
         profile: Nexus 6
-        target: google_api
+        target: google_apis
 
     - name: upload appium logs
       if: always()
